--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.android.support:design:29.1.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.synnapps:carouselview:0.1.5'
+    implementation 'com.github.f0ris.sweetalert:library:1.5.1'
 
     implementation 'com.google.firebase:firebase-database:19.2.1'
     testImplementation 'junit:junit:4.12'
