--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.FullScreen"
+        android:theme="@style/AppTheme"
         tools:replace="android:icon">
         <activity android:name=".activity.Register"></activity>
         <activity android:name=".activity.Login" />
