--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
-        <activity android:name=".activity.Register"></activity>
+        <activity android:name=".activity.ForgotPassword"></activity>
+        <activity android:name=".activity.Register" />
         <activity android:name=".activity.Login" />
         <activity android:name=".activity.MainActivity">
             <intent-filter>
