Change Some Layouts and Make a New Feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
-        <activity android:name=".activity.ForgotPassword"></activity>
-        <activity android:name=".activity.Register" />
-        <activity android:name=".activity.Login" />
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.AllSpecialists"></activity>
+        <activity android:name=".activity.AllForums" />
+        <activity
+            android:name=".activity.ForgotPassword"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.Register"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.Login"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
