--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
-        <activity android:name=".activity.AllSpecialists"></activity>
+        <activity android:name=".activity.AllSpecialists" />
         <activity android:name=".activity.AllForums" />
         <activity
             android:name=".activity.ForgotPassword"
