--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
-        <activity android:name=".activity.Search" />
+        <activity android:name=".activity.Comments" />
+        <activity android:name=".activity.ForumDetail" />
         <activity android:name=".activity.AllSpecialists" />
         <activity android:name=".activity.AllForums" />
         <activity
@@ -25,8 +26,7 @@
         <activity
             android:name=".activity.Login"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".activity.MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
