--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
-        <activity android:name=".activity.EditName"></activity>
+        <activity android:name=".activity.MyForum"></activity>
+        <activity android:name=".activity.ChangePassword" />
+        <activity android:name=".activity.EditName" />
         <activity android:name=".activity.Search" />
         <activity android:name=".activity.Comments" />
         <activity android:name=".activity.ForumDetail" />
