--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.drtech">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application xmlns:tools="http://schemas.android.com/tools"
         android:allowBackup="true"
@@ -13,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
-        <activity android:name=".activity.MyForum"></activity>
+        <activity android:name=".activity.Chat"></activity>
+        <activity android:name=".activity.SpecialistDetail" />
+        <activity android:name=".activity.MyForum" />
         <activity android:name=".activity.ChangePassword" />
         <activity android:name=".activity.EditName" />
         <activity android:name=".activity.Search" />
